@@ -1,8 +1,8 @@
 Package: spider
 Type: Package
 Title: Species Identity and Evolution in R
-Version: 1.1-4
-Date: 2012-03-29
+Version: 1.1-5
+Date: 2012-10-11
 Author: Samuel Brown, Rupert Collins, Stephane Boyer, Marie-Caroline Lefort, Jagoba Malumbres-Olarte, Cor Vink, Rob Cruickshank
 Maintainer: Samuel Brown <s_d_j_brown@hotmail.com>
 Description: A package for the analysis of species limits and DNA barcoding data
